fix(m19): preserve canonical operational attribute order